fix: collapsable bugs

--- a/src/pages/Dashboard/Boards/style.scss
+++ b/src/pages/Dashboard/Boards/style.scss
@@ -32,6 +32,7 @@
         display: flex;
         flex-direction: column;
         padding: 1vw;
+        width: 100%;
         
     }
 }
